Convert satellite name packets and drop the name transfer